<resources>
    <string name="app_name">QuizApp</string>
    <string name="Question1">Q1: How to store heavy structured data in android?</string>
    <string name="Question2">Q2: What is the main programming language for Android development?</string>
    <string name="Question3">Q3: What is log message in android?</string>
    <string name="Question4">Q4: Java is OOP Language [True / False]</string>
    <string name="shared_preferences">Shared Preferences</string>
    <string name="cursor">Cursor</string>
    <string name="sqlite_database">SQlite database</string>
    <string name="not_possible">Not possible</string>
    <string name="php">PHP</string>
    <string name="java">Java</string>
    <string name="html">HTML</string>
    <string name="kotlin">Kotlin</string>
    <string name="log_message_is_used_to_debug_a_program">Log message is used to debug a program.</string>
    <string name="same_as_printf">Same as printf()</string>
    <string name="same_as_toast">Same as Toast().</string>
    <string name="none_of_the_above">None of the above.</string>
    <string name="result">Result</string>
    <string name="reset">Reset</string>
</resources>
